Fixed h1 size on mobile

--- a/css/skowak.css
+++ b/css/skowak.css
@@ -97,7 +97,7 @@ p, strong {
   }
 
   h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   h2 {
